# Custom_inst

./: .env.example  .gitignore  LICENCE  README.md  check_redis.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: bizstyle.js
migrations/: env.py
migrations/versions/: 12c731bf0514_init.py  24a9d24a9005_first.py  3bb335bb7123_comments.py  3e6da0f3c878_init.py  49f18434f59c_add_nultable_to_images.py  6992b136a74d_first.py  6f9dfbda1932_init.py  770e4d254f2b_m2.py  986a2816dcd8_del_foreignkey_comment_id_in_images.py  aa27f7f5bd31_init_cloud.py  cb32ec52f797_first.py  d63edbf65db8_init.py  f62323323de5_init.py  fbd78fcebb89_first.py
src/common/: detail_message.py
src/conf/: .env  config.py
src/database/: db.py  models.py
src/repository/: comments.py  fake.py  images.py  images_admin.py  likes.py  tags.py  tags_images.py  users.py
src/routes/: auth.py  comments.py  frontend.py  healtcheker_db.py  healthchecker_db.py  images.py  images_admin.py  likes.py  tags.py  tags_images.py  users.py
src/schemas/: comments.py  fake.py  images.py  likes.py  tags.py  users.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: reset_password.html  verify_email.html
src/static/: styles.css
src/static/client/: email_sended.html  images_detail.html  load_foto.html  login.html  logout.html  main.html  photo_page.html  post_comment.html  rating_page.html  signin.html  signup.html
src/static/client/css/: main.css  photo_page.css  signup.css
src/static/client/js/: app.js  gallery.js  logout.js  main.js  photo_page.js  signup.js
src/static/posts/: posts.html
src/templates/: index.html  index.js
src/utils/: logger.py  staticfilescache.py  watermark.py
tests/: conftest.py  repository_comments.py  repository_tags.py  test.db  test_2e2_auth.py  test_2e2_users.py  test_e2e_comments.py
